# asrd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
assets/docs/: doc.txt
include/graphics/: cube.h  object.h  room.h  sphere.h  userobject.h  wall.h
include/logic/: objvalidator.h
src/: main.cpp
src/graphics/: cube.cpp  object.cpp  room.cpp  sphere.cpp  userobject.cpp  wall.cpp
src/logic/: objects_module.pyi  objvalidator.cpp  validator.py
src/logic/arrangers/: __init__.py  base.py  genetic.py  monte_carlo.py
src/pybind/: bindings.cpp  cube_bindings.cpp
